# vlr-gg-gcp

./: .gitignore  load-db-and-tables.py  matches-table-update.py  pyproject.toml
docker/: dockerfile
docker/install/: cmd.sh  entrypoint.sh
tests/: test_valorant_scraper_gcp.py
valorant_scraper_gcp/: __init__.py  scraper.py
valorant_scraper_gcp/database/: models.py
