[tool.poetry]
name = "valorant-scraper-gcp"
version = "0.1.0"
description = ""
authors = ["Jamie <jamie.mccann@gmx.at>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.26.0"
pandas = "^1.3.4"
SQLAlchemy = "^1.4.27"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.27.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
